Speech context injection event interception